Fix Gap in Items in Drawer
Fixes a gap beneath every image in the Drawer, caused by images with an 'inline' display, by making them 'block' instead.

--- a/css/app.css
+++ b/css/app.css
@@ -326,6 +326,7 @@ body.drawer-open #drawer {
 	white-space: nowrap;
 }
 #drawer .item img {
+	display: block;
 	width: 100%;
 }
 @media ( min-width: 1024px ) {
